# FinAI

./: CONTRIBUTING.md  LICENSE  README.md
Backend/: README.md  pyproject.toml  requirements.txt  run.py  start.bat  test.db
Backend/app/: main.py
Backend/app/config/: settings.py
Backend/app/database/: crud.py  database.py
Backend/app/models/: user.py
Backend/app/schemas/: user.py
Backend/tests/: test_main.py
Frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/dashboard/: page.tsx
Frontend/app/history/: page.tsx
Frontend/app/onboarding/: page.tsx
Frontend/app/portfolio/: page.tsx
Frontend/app/profile/: page.tsx
Frontend/app/recommendation/: page.tsx
Frontend/components/dashboard/: dashboard-client.tsx  recommendation-card.tsx
Frontend/components/education/: education-card.tsx
Frontend/components/i18n/: language-switcher.tsx  translation-provider.tsx
Frontend/components/nav/: navbar-wrapper.tsx  navbar.tsx
Frontend/components/onboarding/: goals-selector.tsx  language-toggle.tsx  profile-details.tsx  progress.tsx  step-1-basic.tsx  step-2-income-type.tsx  step-3-income-slider.tsx  step-4-risk.tsx
Frontend/components/ui/: badge.tsx  button.tsx  (+3 more)
Frontend/lib/: api.ts
Frontend/styles/: globals.css
ML/: .gitignore  README.md  pyproject.toml  requirements.txt
ML/app/: api.py  config.py  data_ingestion.py  model.py  preprocessing.py  utils.py
ML/app/agents/: fin_agent.py  trend_agent.py
ML/notebooks/: data_exploration.ipynb
ML/tests/: test_model.py
(+12 files in other folders)
