[tool.poetry]
name = "finai-ml"
version = "0.1.0"
description = "ML models and API for FinAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.1"
numpy = "^1.26.1"
transformers = "^4.34.1"
torch = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
